--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.25.1",
+    "@clerk/themes": "^1.7.6",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "cors": "^2.8.5",
