--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-select": "^5.7.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
